Bug 1910480 - Use preblending in DrawTargetWebgl for grayscale AA on Windows. r=aosmond

Gamma-aware ClearType rendering is used on Windows even when requesting
grayscale AA, as we still sample the approximate luminance of the ClearType
result to generate the grayscale result. To compensate for this, we have to
use preblending for grayscale AA, even when no subpixel AA is requested.

Differential Revision: https://phabricator.services.mozilla.com/D222229